# libsyncrpc

./: .gitignore  Cargo.toml  README.md  README_tpl.md  SUPPORT.md  bench.mjs  echo.mjs  gen-readme.mjs  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
crates/libsyncrpc-connection/: Cargo.toml
crates/libsyncrpc-connection/src/: lib.rs
examples/: socket_child.rs
libsyncrpc_mmap_channel/: Cargo.toml
libsyncrpc_mmap_channel/examples/: child_client.rs
libsyncrpc_mmap_channel/src/: lib.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: ipc_handler.rs  lib.rs  mmap.rs  socket_line.rs
