[package]
edition = "2021"
name = "libsyncrpc"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["./crates/*"]

[dependencies]
libsyncrpc-connection = { version = "0.0.0", path = "./crates/libsyncrpc-connection" }

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.12", features = ["napi4"] }
napi-derive = "2.16.12"

[features]
noop = ["napi-derive/noop"]
used_linker = []

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = true
