[package]
edition = "2021"
name = "libsyncrpc"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["./crates/*"]

[dependencies.libsyncrpc-connection]
version = "0.0.0"
path = "./crates/libsyncrpc-connection"

[dependencies.napi]
version = "2"
default-features = false
# see https://nodejs.org/api/n-api.html#node-api-version-matrix
features = ["napi4"]

[features]
used_linker = []

[dependencies.napi-derive]
version = "2"
features = ["type-def"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
